== 1.2.7 (in development)

=== Minor Changes
* Fixed problem checking for UtilityFunction in class Object
* Improved detection of invalid config files
* Invalid config files are now ignored
* Non-existent files are now ignored

== 1.2.6 (2009-11-28)

=== Minor Changes
* Corrected display of module methods to use # (#56)

== 1.2.5 (2009-11-19)

=== Minor Changes
* Ignores ruby_parser errors and pretends the offending file was empty

== 1.2.4 (2009-11-17)

=== Major Changes
* The -f, -c and -s options for formatting smell warnings have been removed

=== Minor Changes
* ControlCouple now warns about parameters defaulted to true/false

== 1.2.3 (2009-11-2)

=== Minor Changes
* New smell: Attribute (disabled by default)
* Expanded DataClump to check modules (#9)
* Fixed LargeClass to ignore inner classes and modules
* Fixed LargeClass to ignore singleton methods
* Removed support for MyClass.should_not reek due to ParseTree EOL
* Removed internal requiring of 'rubygems'

== 1.2.1 (2009-10-02)

=== Minor Changes
* New smell: Class Variable

See http://wiki.github.com/kevinrutherford/reek for details

== 1.2 2009-09-20

=== Major Changes
* Reek passes all its tests under ruby 1.8.6, 1.8.7 and 1.9.1 (fixed #16)
* New smell -- Data Clump:
** Looks within a class for 3 or more methods taking the same 2 or more parameters
* New smell -- Simulated Polymorphism:
** Currently only performs basic check for multiple tests of same value
* Reek's output reports are now formatted differently:
** Reek is no longer silent about smell-free source code
** Output now reports on all files examined, even if they have no smells
** Smell warnings are indented in the report; file summary headers are not
** Reports for multiple sources are run together; no more blank lines
** Reports in spec matcher failures are quiet (fixed #38)
* The smells masked by *.reek config files can now be seen:
** The header for each source file now counts masked smells