@@ -42,6 +42,7 @@ lib/reek/sexp_formatter.rb
 lib/reek/singleton_method_context.rb
 lib/reek/smell_warning.rb
 lib/reek/smells/attribute.rb
+lib/reek/smells/boolean_parameter.rb
 lib/reek/smells/class_variable.rb
 lib/reek/smells/control_couple.rb
 lib/reek/smells/data_clump.rb
@@ -87,6 +88,7 @@ spec/reek/singleton_method_context_spec.rb
 spec/reek/smell_warning_spec.rb
 spec/reek/smells/attribute_spec.rb
 spec/reek/smells/behaves_like_variable_detector.rb
+spec/reek/smells/boolean_parameter_spec.rb
 spec/reek/smells/class_variable_spec.rb
 spec/reek/smells/control_couple_spec.rb
 spec/reek/smells/data_clump_spec.rb
