@@ -20,6 +20,9 @@ FeatureEnvy:
 ClassVariable: 
   exclude: *id001
   enabled: true
+BooleanParameter: 
+  exclude: *id001
+  enabled: true
 UncommunicativeName: 
   accept: 
   - Inline::C
