@@ -19,36 +19,6 @@ describe ControlCouple do
       'def blocks(arg) @text.map { |blk| arg ? blk : "#{blk}" } end'.should reek_of(:ControlCouple, /arg/)
     end
   end
-
-  context 'parameter defaulted with boolean' do
-    context 'in a method' do
-      it 'reports a parameter defaulted to true' do
-        'def cc(arga = true) end'.should reek_of(:ControlCouple, /arga/)
-      end
-      it 'reports a parameter defaulted to false' do
-        'def cc(arga = false) end'.should reek_of(:ControlCouple, /arga/)
-      end
-      it 'reports two parameters defaulted to booleans' do
-        src = 'def cc(nowt, arga = true, argb = false, &blk) end'
-        src.should reek_of(:ControlCouple, /arga/)
-        src.should reek_of(:ControlCouple, /argb/)
-      end
-    end
-
-    context 'in a singleton method' do
-      it 'reports a parameter defaulted to true' do
-        'def self.cc(arga = true) end'.should reek_of(:ControlCouple, /arga/)
-      end
-      it 'reports a parameter defaulted to false' do
-        'def fred.cc(arga = false) end'.should reek_of(:ControlCouple, /arga/)
-      end
-      it 'reports two parameters defaulted to booleans' do
-        src = 'def Module.cc(nowt, arga = true, argb = false, &blk) end'
-        src.should reek_of(:ControlCouple, /arga/)
-        src.should reek_of(:ControlCouple, /argb/)
-      end
-    end
-  end
 end
 
 require 'spec/reek/smells/smell_detector_shared'
